; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_get_sublist_types.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_get_sublist_types.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sublist_descr = type { i32 }

@sublists_num = common dso_local global i32 0, align 4
@Sublists = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_sublist_types(%struct.sublist_descr* %0) #0 {
  %2 = alloca %struct.sublist_descr*, align 8
  store %struct.sublist_descr* %0, %struct.sublist_descr** %2, align 8
  %3 = load i32, i32* @sublists_num, align 4
  %4 = icmp sge i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @sublists_num, align 4
  %7 = icmp sle i32 %6, 16
  br label %8

8:                                                ; preds = %5, %1
  %9 = phi i1 [ false, %1 ], [ %7, %5 ]
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.sublist_descr*, %struct.sublist_descr** %2, align 8
  %13 = load i32, i32* @Sublists, align 4
  %14 = load i32, i32* @sublists_num, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 4, %15
  %17 = trunc i64 %16 to i32
  %18 = call i32 @memcpy(%struct.sublist_descr* %12, i32 %13, i32 %17)
  %19 = load i32, i32* @sublists_num, align 4
  ret i32 %19
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(%struct.sublist_descr*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
